# api

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: mutants.toml
app/api/v0/update/: data.py
migrations/: 20260227033408_remove_bangumi_index_id_from_seasons.down.sql  20260227033408_remove_bangumi_index_id_from_seasons.up.sql  20260309000001_add_subject_source_fields.down.sql  20260309000001_add_subject_source_fields.up.sql  20260309000002_add_last_updated_at_to_subjects.down.sql  20260309000002_add_last_updated_at_to_subjects.up.sql  20260310000001_upgrade_subjects_float_precision.down.sql  20260310000001_upgrade_subjects_float_precision.up.sql
src/: main.rs
src/api/: endpoints.rs  mod.rs  schemas.rs
src/api/middleware/: auth.rs  mod.rs
src/core/: mod.rs
src/core/admin/: mod.rs
src/core/query/: mod.rs
src/core/scheduler/: mod.rs
src/core/sync/: mod.rs
src/dal/: db.rs
src/dal/dto/: season.rs  season_subject.rs  subject.rs
src/dal/repositories/: season_repository.rs  season_subject_repository.rs  subject_repository.rs
src/services/: mod.rs
src/services/bangumi/: client.rs  schemas.rs
src/services/bangumi/api/: episode.rs  mod.rs  subject.rs
src/services/deploy_hook/: mod.rs
src/services/season_data/: mod.rs
