[package]
name = "bgm-rank-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1.7.2"
tower = { version = "0.5.2", features = ["util"] }
tracing-test = "0.2"
